--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ Categorized_Character_images/
 Categorized_Character_images/*
 Augmented_Character_Images/
 Augmented_Character_Images/*
+AlexNet.keras
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
